[gd_scene load_steps=10 format=2]

[ext_resource path="res://NN_test/Mask.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/interface/shop/Shop.tscn" type="PackedScene" id=2]
[ext_resource path="res://NN_test/temp world.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/ship/blueprint/BlueprintManager.tscn" type="PackedScene" id=4]
[ext_resource path="res://NN_test/1x1.png" type="Texture" id=5]
[ext_resource path="res://src/shaders/rainSimple.gdshader" type="Shader" id=6]
[ext_resource path="res://src/scenes/OverWorld.gd" type="Script" id=7]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("GameScreen/ViewportControlMask/WorldMask")

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 6 )
shader_param/uv1_scale = Vector3( 5, 5, 1 )
shader_param/uv1_offset = Vector3( 0, -16.55, 0 )
shader_param/o8625_rainRate = 10.0
shader_param/o8625_rainSpeed = 1.0
shader_param/variation = 0.0
shader_param/texture_1 = SubResource( 1 )

[node name="OverWorld" type="Node2D"]
pause_mode = 2
script = ExtResource( 7 )

[node name="GameScreen" type="CanvasLayer" parent="."]

[node name="ViewportControlWorld" type="ViewportContainer" parent="GameScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true

[node name="World" type="Viewport" parent="GameScreen/ViewportControlWorld"]
size = Vector2( 1024, 600 )
size_override_stretch = true
transparent_bg = true
handle_input_locally = false
fxaa = true
debanding = true
hdr = false
disable_3d = true
usage = 1
render_target_update_mode = 3

[node name="temp world" parent="GameScreen/ViewportControlWorld/World" instance=ExtResource( 3 )]

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="GameScreen/ViewportControlWorld/World/temp world/Player/Camera" index="0"]
remote_path = NodePath("../../../../../../../Camera")

[node name="ViewportControlMask" type="ViewportContainer" parent="GameScreen"]
margin_left = -256.0
margin_top = -254.0
margin_bottom = 2.0

[node name="WorldMask" type="Viewport" parent="GameScreen/ViewportControlMask"]
pause_mode = 1
size = Vector2( 256, 256 )
size_override_stretch = true
transparent_bg = true
handle_input_locally = false
hdr = false
disable_3d = true
usage = 1
render_target_v_flip = true
render_target_update_mode = 3
gui_disable_input = true
gui_snap_controls_to_pixels = false
shadow_atlas_quad_0 = 0
shadow_atlas_quad_1 = 0
shadow_atlas_quad_2 = 0
shadow_atlas_quad_3 = 0

[node name="MaskLayer" type="CanvasLayer" parent="GameScreen/ViewportControlMask/WorldMask"]
follow_viewport_enable = true

[node name="Mask" parent="GameScreen/ViewportControlMask/WorldMask/MaskLayer" instance=ExtResource( 1 )]
target_vp_path = NodePath("../../../../ViewportControlWorld/World")
wind_dir = Vector2( -31.373, -20.493 )
update_length = 1.0
update_on_every_frame = true

[node name="Camera2D" parent="GameScreen/ViewportControlMask/WorldMask/MaskLayer/Mask" index="0"]
visible = false

[node name="UI" type="CanvasLayer" parent="GameScreen"]
layer = 2

[node name="BlueprintManager" parent="GameScreen/UI" instance=ExtResource( 4 )]
__meta__ = {
"_edit_lock_": true
}

[node name="Shop" parent="GameScreen/UI" instance=ExtResource( 2 )]
visible = false
margin_right = 268.0
__meta__ = {
"_edit_lock_": true
}

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 508, 527 )
current = true
process_mode = 0
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.4
drag_margin_top = 0.05
drag_margin_right = 0.4
drag_margin_bottom = 0.33
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="Rain" type="Sprite" parent="Camera"]
pause_mode = 1
self_modulate = Color( 0.564706, 0.827451, 0.94902, 1 )
material = SubResource( 2 )
scale = Vector2( 2048, 2048 )
texture = ExtResource( 5 )

[editable path="GameScreen/ViewportControlWorld/World/temp world"]
[editable path="GameScreen/ViewportControlWorld/World/temp world/Player"]
[editable path="GameScreen/ViewportControlWorld/World/temp world/BlueZ-5"]
[editable path="GameScreen/ViewportControlWorld/World/temp world/GreeZ5"]
[editable path="GameScreen/ViewportControlWorld/World/temp world/RedZ0"]
[editable path="GameScreen/ViewportControlMask/WorldMask/MaskLayer/Mask"]
